--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project",
+  "name": "To Do List App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,6 +39,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
-  },
-  "homepage": "https://github.com/Fairooz2150/To-Do"
+  }
 }
